# Container-Management-Systems

./: pyproject.toml  task.md  мое ДП, ПЗ.docx
src/: main.py  startup.py
src/app/: config.py  init.py  main.py  startup.py
src/app/api/: __init__.py  init.py
src/app/api/balancer/: router.py  service.py  views.py
src/app/api/container/: router.py  service.py  views.py
src/app/api/metrics/: router.py  service.py  views.py
src/app/api/scale/: router.py  service.py  views.py
src/app/container/: router.py  service.py  views.py
src/app/core/handlers/: errors.py  handlers.py
src/app/core/schemas/: container.py
src/app/static/: container.html  metrics.html
src/core/schemas/: base.py
